# MSGraph-MCP

./: .env.sample  .gitignore  README.md  pyproject.toml
lib/: identity.py
src/msgraph_mcp/: config.py  main.py  models.py  utils.py
src/msgraph_mcp/mg/: calendar.py  client.py  mail.py
terraform/: README.md  dev.tfvars.exemple  identity.tf  main.tf  variables.tf
